# DeepSight

./: AIAnalysis.cpp  AIAnalysis.h  CMakeLists.txt  CameraCapture.cpp  CameraCapture.h  CommonDef.h  Controller.cpp  Controller.h  ErrorDialog.qml  FlowCounter.cpp  FlowCounter.h  FrameDisplay.cpp  FrameDisplay.h  FrameImageProvider.cpp  FrameImageProvider.h  FramePreprocessor.cpp  FramePreprocessor.h  Main.qml  MediaCapture.cpp  MediaCapture.h  OutputPostProcessor.cpp  OutputPostProcessor.h  OutputPostprocessor.cpp  OutputPostprocessor.h  TrackManager.cpp  TrackManager.h  VisionPainter.cpp  VisionPainter.h  main.cpp  resume.md
